# ROS_Task_InterIIT_Tech

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/motor_controller/lib/motor_controller/: operatorNode
install/motor_controller/share/motor_controller/: package.sh  package.xml
install/motor_controller/share/motor_controller/gazebo_models/: carModelURDF.urdf  carModelURDF.urdf.xacro  controller.yaml
install/motor_controller/share/motor_controller/launch/: launch.py
install/teleop_twist_keyboard/share/teleop_twist_keyboard/: package.sh
log/: latest_build  latest_list
src/motor_controller/: package.xml  setup.py
src/motor_controller/gazebo_models/: carModelURDF.urdf  carModelURDF.urdf.xacro  carModelURDF.xacro  controller.yaml  model.config  model.sdf
src/motor_controller/launch/: launch.py  world_launch.py
src/motor_controller/motor_controller/: operatorNode.py
src/motor_controller/world/: testing_world.world
